--- a/config/examples/simple/simple-utcd.conf.example
+++ b/config/examples/simple/simple-utcd.conf.example
@@ -1,5 +1,5 @@
-# Simple UTC Daemon Configuration File
-# This file contains configuration options for simple-utcd
+# Simple UTC Daemon Configuration
+# This is a basic configuration suitable for development and testing
 
 # Network Configuration
 listen_address = 0.0.0.0
@@ -9,35 +9,26 @@ max_connections = 100
 
 # UTC Server Configuration
 stratum = 2
-reference_id = "UTC"
-reference_clock = "UTC"
-upstream_servers = ["time.nist.gov", "time.google.com", "pool.ntp.org"]
 sync_interval = 64
 timeout = 1000
 
 # Logging Configuration
-log_file = /var/log/simple-utcd.log
+log_file = /var/log/simple-utcd/simple-utcd.log
 log_level = INFO
 enable_console_logging = true
 enable_syslog = false
 
 # Security Configuration
 enable_authentication = false
-authentication_key = ""
-restrict_queries = false
-allowed_clients = []
+authentication_key =
 denied_clients = []
+allowed_clients = []
 
 # Performance Configuration
-worker_threads = 4
-max_packet_size = 1024
+worker_threads = 2
 enable_statistics = true
 stats_interval = 60
 
-# Drift File Configuration
-drift_file = /var/lib/simple-utcd/drift
-enable_drift_compensation = true
-
-# Leap Second Configuration
-leap_second_file = /var/lib/simple-utcd/leap-seconds
-enable_leap_second_handling = true
+# Development Settings
+debug_mode = false
+verbose_logging = false
